--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
     {{ content }}
   </div>
   
+  {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include analytics.html %}
+  {% endif %}
 </body>
 </html>
